fix alignment of header buttons

--- a/source/assets/stylesheets/components/_buttons.sass
+++ b/source/assets/stylesheets/components/_buttons.sass
@@ -79,7 +79,7 @@
   color: $white
   border-radius: 50%
   border: none
-  height: 40px
+  height: 30px
   opacity: 1.0
   transition: opacity .5s
   cursor: pointer
@@ -88,8 +88,8 @@
     margin-top: 0px
     +breakpoint(md)
       margin-top: -12px
-  @media screen and (max-width: $break-sm)
-    height: 30px
+  +breakpoint(md)
+    height: 40px
 
 .open-btn:hover
   opacity: .6
